--- a/A_la_francaise.html
+++ b/A_la_francaise.html
@@ -31,25 +31,45 @@
         <div class="image-entete">
             <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française" />
             <h1>À la française</h1>
-            <div class="heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+
+            <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+            </div>
         </div>
         <div class="block-item">
             <span class="title">ENTREES</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Tartare de poulpe acidulé</h2>
-                    <span>Aux zests d'orange</span>
-                    <span class="price">25€</span>
+                    <div class="item-header">
+                        <h2>Tartare de poulpe acidulé</h2>
+                        <span>Aux zests d'orange</span>
+                    </div>
+
+                    <div class="item-price">25€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Velouté de légumes d'antan</h2>
-                    <span>Carotte,panais,topinambour</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Velouté de légumes d'antan</h2>
+                        <span>Carotte,panais,topinambour</span>
+                    </div>
+                    <div class="item-price">35€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Soupe à l'oignon</h2>
-                    <span>evisitée</span>
-                    <span class="price">20€</span>
+                    <div class="item-header">
+                        <h2>Soupe à l'oignon</h2>
+                        <span>Revisitée</span>
+                    </div>
+                    <div class="item-price">20€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -57,19 +77,36 @@
             <span class="title">PLATS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Coquilles Saint-jacques</h2>
-                    <span>Accompagnées d'une purée de panais</span>
-                    <span class="price">40€</span>
+                    <div class="item-header">
+                        <h2>Coquilles Saint-jacques</h2>
+                        <span>Accompagnées d'une purée de panais</span>
+                    </div>
+                    <div class="item-price">40€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Magret de canard</h2>
-                    <span>Et parmentier de pommes de terres</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Magret de canard</h2>
+                        <span>Et parmentier de pommes de terres</span>
+                    </div>
+                    <div class="item-price">35€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Pigeonneau d'ille-et-Vilaine</h2>
-                    <span>Sur son lit de gnocchis aux légumes</span>
-                    <span class="price">44€</span>
+                    <div class="item-header">
+                        <h2>Pigeonneau d'ille-et-Vilaine</h2>
+                        <span>Sur son lit de gnocchis aux légumes</span>
+                    </div>
+                    <div class="item-price">44€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -77,19 +114,35 @@
             <span class="title">DESSERTS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Pétales de violettes glacés</h2>
-                    <span>Et purée de noisettes</span>
-                    <span class="price">18€</span>
+                    <div class="item-header">
+                        <h2>Pétales de violettes glacés</h2>
+                        <span>Et purée de noisettes</span>
+                    </div>
+                    <div class="item-price">18€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Fondant au chocolat</h2>
-                    <span>Revisité</span>
-                    <span class="price">22€</span>
+                    <div class="item-header">
+                        <h2>Fondant au chocolat</h2>
+                        <span>Revisité</span>
+                    </div>
+                    <div class="item-price">22€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Millefeuille croustillant</h2>
-                    <span>Myrtilles et pàte d'amande</span>
-                    <span class="price">23€</span>
+                    <div class="item-header">
+                        <h2>Millefeuille croustillant</h2>
+                        <span>Myrtilles et pàte d'amande</span>
+                    </div>
+                    <div class="item-price">23€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -115,7 +168,9 @@
             </div>
         </div>
     </footer>
-    <div class="spinloader spinloader--full-height"></div>
+    <div class="spinloader spinloader--full-height">
+
+    </div>
 
 
 </body>
