--- a/La_palette_de_gout.html
+++ b/La_palette_de_gout.html
@@ -31,25 +31,44 @@
         <div class="image-entete">
             <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="À la française" title="À la française" />
             <h1>La palette du gout</h1>
-            <div class="heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+            </div>
         </div>
         <div class="block-item">
             <span class="title">ENTREES</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Fricassée d'escargot</h2>
-                    <span>Au pimet d'espelette</span>
-                    <span class="price">25€</span>
+                    <div class="item-header">
+                        <h2>Fricassée d'escargot</h2>
+                        <span>Au pimet d'espelette</span>
+                    </div>
+
+                    <div class="item-price">25€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Foie gras de canard mi-cuit</h2>
-                    <span>Et ses copeaux de truffe noire</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Foie gras de canard mi-cuit</h2>
+                        <span>Et ses copeaux de truffe noire</span>
+                    </div>
+                    <div class="item-price">35€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Oeuf au plat</h2>
-                    <span>Assaionnée à la tuffe sur lit de...</span>
-                    <span class="price">20€</span>
+                    <div class="item-header">
+                        <h2>Oeuf au plat</h2>
+                        <span>Assaionnée à la tuffe sur lit de...</span>
+                    </div>
+                    <div class="item-price">20€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -57,19 +76,36 @@
             <span class="title">PLATS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Filet de boeuf aux herbes</h2>
-                    <span>Accompagnées de sa ribambelle de légu...</span>
-                    <span class="price">40€</span>
+                    <div class="item-header">
+                        <h2>Filet de boeuf aux herbes</h2>
+                        <span>Accompagnées de sa ribambelle de légu...</span>
+                    </div>
+                    <div class="item-price">40€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Parmentier de queue de boeuf</h2>
-                    <span>Ala truffe noire sur sa purée de panais</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Parmentier de queue de boeuf</h2>
+                        <span>Ala truffe noire sur sa purée de panais</span>
+                    </div>
+                    <div class="item-price">35€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Filet de Turbot</h2>
-                    <span>Aux agrumes</span>
-                    <span class="price">44€</span>
+                    <div class="item-header">
+                        <h2>Filet de Turbot</h2>
+                        <span>Aux agrumes</span>
+                    </div>
+                    <div class="item-price">44€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -77,23 +113,39 @@
             <span class="title">DESSERTS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Paris-Brest</h2>
-                    <span>Revisité</span>
-                    <span class="price">18€</span>
+                    <div class="item-header">
+                        <h2>Paris-Brest</h2>
+                        <span>Revisité</span>
+                    </div>
+                    <div class="item-price">18€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Macaron au chocolatd'exception</h2>
-                    <span>Et glace à la vanille de Madagascar</span>
-                    <span class="price">22€</span>
+                    <div class="item-header">
+                        <h2>Macaron au chocolatd'exception</h2>
+                        <span>Et glace à la vanille de Madagascar</span>
+                    </div>
+                    <div class="item-price">22€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Mousse au chocolat</h2>
-                    <span>Au piment d'espelette et à la truffe noire</span>
-                    <span class="price">23€</span>
+                    <div class="item-header">
+                        <h2>Mousse au chocolat</h2>
+                        <span>Au piment d'espelette et à la truffe noire</span>
+                    </div>
+                    <div class="item-price">23€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
-
         </div>
+
         <div class="Commander"><span>Commander</span></div>
     </div>
     </div>
