--- a/Accueil.html
+++ b/Accueil.html
@@ -2,9 +2,9 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1, user-scalable=0" name="viewport">
     <title>Bienvenue chez OhMyFood votre nouveau restaurant</title>
     <meta name="description" content="Bienvenue chez OhMyFood votre nouveau restaurant" />
     <link rel="shortcut icon" href="images/logo/ohmyfood@2x.svg" type="image/x-icon" />
@@ -42,7 +42,8 @@
         <div id="fonctionnement">
             <span>Fonctionnement</span>
             <ol>
-                <li><span class="number">1</span><i class="fas fa-mobile-alt"></i><a href="#">Choisissez un restaurant</a></li>
+                <li><span class="number">1</span><i class="fas fa-mobile-alt"></i><a href="#">Choisissez un
+                        restaurant</a></li>
                 <li><span class="number">2</span><i class="fas fa-list-ul"></i><a href="#">Composez votre menu</a></li>
                 <li><span class="number">3</span><i class="fas fa-store"></i><a href="#">Dégustez au restaurant</a></li>
             </ol>
@@ -50,62 +51,74 @@
         <div id="restaurant">
             <div class="item">
                 <a href="La_palette_de_gout.html"> <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette de gout" title="palette de gout" /></a>
-                <div>
+                <div class="heart-block">
 
                     <div class="name">
                         <p>La palette du goût</p>
-                        <span>Ménilmontant</span></div>
+                        <span>Ménilmontant</span>
+                    </div>
 
-                    <div class="heart"><i class="far fa-heart hoverA"></i><i class="fas fa-heart hoverB"></i>
+                    <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
                     </div>
                 </div>
-                <div><span class="nouveau">Nouveau</span></div>
+                <div class="nouveau"><span>Nouveau</span></div>
             </div>
             <div class="item">
                 <a href="La_note_enchantee.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée" /></a>
+                <div class="heart-block">
+                    <div class="name">
+                        <p>La note enchantée</p>
+                        <span>Charonne</span>
+                    </div>
 
-                <div class="name">
-                    <p>La note enchantée</p>
-                    <span>Charonne</span></div>
+                    <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+                    </div>
 
-                <div class="heart"> <i class="far fa-heart hoverA"></i><i class="fas fa-heart hoverB"></i>
+
                 </div>
-                <div><span class="nouveau">Nouveau</span></div>
+                <div class="nouveau"><span>Nouveau</span></div>
             </div>
+
             <div class="item">
                 <a href="A_la_francaise.html"> <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="À la française" title="À la française" /></a>
-                <div class="name">
-                    <p>À la française</p>
-                    <span>Cité rouge</span></div>
-                <div class="heart"><i class="far fa-heart hoverA"></i><i class="fas fa-heart hoverB"></i>
+                <div class="heart-block">
+                    <div class="name">
+                        <p>À la française</p>
+                        <span>Cité rouge</span>
+                    </div>
+                    <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+                    </div>
                 </div>
             </div>
             <div class="item">
                 <a href="Le_delice_des_sens.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens" /></a>
-                <div class="name">
-                    <p>Le délice des sens</p>
-                    <span>Folie-Méricourt</span></div>
-                <div class="heart"><i class="far fa-heart hoverA"></i><i class="fas fa-heart hoverB"></i></div>
+                <div class="heart-block">
+                    <div class="name">
+                        <p>Le délice des sens</p>
+                        <span>Folie-Méricourt</span>
+                    </div>
+                    <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
 
-    <footer>
-        <div class="footer">
-            <div class="footer__logo"> <img src="images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood" /></div>
-            <div class="footer__url">
-                <ul class="footer__url__list">
-                    <li> <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
-                    <li>
-                        <a href="#"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
-                    </li>
-                    <li><a href="#">Mentions Légales</a></li>
-                    <li><a href="mailto:test@test.local">Contact</a></li>
-                </ul>
+        <footer>
+            <div class="footer">
+                <div class="footer__logo"> <img src="images/logo/ohmyfood@2x.svg" alt="logo-ohmyfood" /></div>
+                <div class="footer__url">
+                    <ul class="footer__url__list">
+                        <li> <a href="#"><i class="fas fa-utensils footer__icon"></i>Proposer un restaurant</a></li>
+                        <li>
+                            <a href="#"></a><i class="fas fa-hands-helping footer__icon"></i> Devenir partenaire</a>
+                        </li>
+                        <li><a href="#">Mentions Légales</a></li>
+                        <li><a href="mailto:test@test.local">Contact</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </footer>
-    <div class="spinloader spinloader--full-height"></div>
+        </footer>
+        <div class="spinloader spinloader--full-height"></div>
 
 
 </body>
