--- a/La_note_enchantee.html
+++ b/La_note_enchantee.html
@@ -31,77 +31,134 @@
         <div class="image-entete">
             <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" title="La note enchantée" />
             <h1>La note enchantée</h1>
-            <div class="heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+            </div>
         </div>
         <div class="block-item">
             <span class="title">ENTREES</span>
             <ul>
                 <li class="animate-card">
+                    <div class="item-header">
+                        <h2>Ravioles de foie gras</h2>
+                        <span>Accompagnés de leur créme à la truffe</span>
+                    </div>
 
-                    <h2>Ravioles de foie gras</h2>
-                    <span>Accompagnés de leur créme à la truffe</span>
-                    <span class="price">25€</span>
+                    <div class="item-price">25€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-
-                    <h2>Caviar osciétre</h2>
-                    <span>Sur blini à la farine de blé noir</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Caviar osciétre</h2>
+                        <span>Sur blini à la farine de blé noir</span>
+                    </div>
+                    <div class="item-price">35€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Homard et espuma de ...</h2>
-                    <span>Mariné aux zests d'orange</span>
-                    <span class="price">20€</span>
+                    <div class="item-header">
+                        <h2>Homard et espuma de ...</h2>
+                        <span>Mariné aux zests d'orange</span>
+                    </div>
+                    <div class="item-price">20€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Foie gras de canard cuit entier</h2>
-                    <span>Confiture de figue et pain toasté</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Foie gras de canard cuit entier</h2>
+                        <span>Confiture de figue et pain toasté</span>
+                    </div>
+                    <div class="item-price">35€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
+            </ul>
         </div>
         <div class="block-item">
             <span class="title">PLATS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Noix de coquilles Saint-Jacques</h2>
-                    <span>Sur lit de puée de céleri-rave</span>
-                    <span class="price">40€</span>
+                    <div class="item-header">
+                        <h2>Noix de coquilles Saint-Jacques</h2>
+                        <span>Sur lit de puée de céleri-rave</span>
+                    </div>
+                    <div class="item-price">40€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Langoustine poélée</h2>
-                    <span>Purée de patate douce</span>
-                    <span class="price">35€</span>
-                </li>
-                <li class="animate-card">
-                    <h2>Mijoté de queue de boeuf</h2>
-                    <span>Et riz sauvage aux zests de citron</span>
-                    <span class="price">44€</span>
-                </li>
+                    <div class="item-header">
+                        <h2>Langoustine poélée</h2>
+                        <span>Purée de patate douce</span>
+                    </div>
+                    <div class="item-price">35€</div>
 
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
+                </li>
+                <li class="animate-card">
+                    <div class="item-header">
+                        <h2>Mijoté de queue de boeuf</h2>
+                        <span>Et riz sauvage aux zests de citron</span>
+                    </div>
+                    <div class="item-price">44€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
+                </li>
+            </ul>
         </div>
         <div class="block-item">
             <span class="title">DESSERTS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Macaron noisette et chocolat</h2>
-                    <span>Glace au caramel brun et sel de Guérande</span>
-                    <span class="price">18€</span>
-                </li>
-                <li class="animate-card">
-                    <h2>Baba au rhum revisité</h2>
-                    <span>Avec son coulis de citron</span>
-                    <span class="price">22€</span>
-                </li>
-                <li class="animate-card">
-                    <h2>Tarte au citrron meringuée</h2>
-                    <span>Destructurée</span>
-                    <span class="price">23€</span>
-                </li>
+                    <div class="item-header">
+                        <h2>Macaron noisette et chocolat</h2>
+                        <span>Glace au caramel brun et sel de Guérande</span>
+                    </div>
+                    <div class="item-price">18€</div>
 
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
+                </li>
+                <li class="animate-card">
+                    <div class="item-header">
+                        <h2>Baba au rhum revisité</h2>
+                        <span>Avec son coulis de citron</span>
+                    </div>
+                    <div class="item-price">22€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
+                </li>
+                <li class="animate-card">
+                    <div class="item-header">
+                        <h2>Tarte au citrron meringuée</h2>
+                        <span>Destructurée</span>
+                    </div>
+                    <div class="item-price">23€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
+                </li>
+            </ul>
         </div>
         <div class="Commander"><span>Commander</span></div>
     </div>
-
+    </div>
 
 
 
