--- a/Le_delice_des_sens.html
+++ b/Le_delice_des_sens.html
@@ -31,25 +31,44 @@
         <div class="image-entete">
             <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Le délice des sens" title="Le délice des sens" />
             <h1>Le delices des sens</h1>
-            <div class="heart"><i class="far fa-heart"></i><i class="fas fa-heart"></i></div>
+            <div class="like"><i class="far fa-heart default-icon"></i><i class="fas fa-heart hover-icon"></i>
+            </div>
         </div>
         <div class="block-item">
             <span class="title">ENTREES</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Tartare de thon</h2>
-                    <span>Assaisonné yuzu</span>
-                    <span class="price">25€</span>
+                    <div class="item-header">
+                        <h2>Tartare de thon</h2>
+                        <span>Assaisonné yuzu</span>
+                    </div>
+
+                    <div class="item-price">25€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Bouchée de homard croustillant</h2>
-                    <span>Et sa farandole de petits légumes</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Bouchée de homard croustillant</h2>
+                        <span>Et sa farandole de petits légumes</span>
+                    </div>
+                    <div class="item-price">35€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Velouté de cépes</h2>
-                    <span>Aux truffes</span>
-                    <span class="price">20€</span>
+                    <div class="item-header">
+                        <h2>Velouté de cépes</h2>
+                        <span>Aux truffes</span>
+                    </div>
+                    <div class="item-price">20€
+                    </div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -57,19 +76,37 @@
             <span class="title">PLATS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Poulet roti aux herbes de provence</h2>
-                    <span>Et sa Créme de truffe</span>
-                    <span class="price">40€</span>
+                    <div class="item-header">
+                        <h2>Poulet roti aux herbes de provence</h2>
+                        <span>Et sa Créme de truffe</span>
+                    </div>
+                    <div class="item-price">40€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Langouste rotie</h2>
-                    <span>Et ses légumes de saison</span>
-                    <span class="price">35€</span>
+                    <div class="item-header">
+                        <h2>Langouste rotie</h2>
+                        <span>Et ses légumes de saison</span>
+                    </div>
+                    <div class="item-price">35€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
+
                 <li class="animate-card">
-                    <h2>Cote de bouef angus</h2>
-                    <span>Et sa purée de panais</span>
-                    <span class="price">44€</span>
+                    <div class="item-header">
+                        <h2>Cote de bouef angus</h2>
+                        <span>Et sa purée de panais</span>
+                    </div>
+                    <div class="item-price">44€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
@@ -77,22 +114,41 @@
             <span class="title">DESSERTS</span>
             <ul>
                 <li class="animate-card">
-                    <h2>Farandole de desserts</h2>
-                    <span>Du chef</span>
-                    <span class="price">18€</span>
+                    <div class="item-header">
+                        <h2>Créme brulée</h2>
+                        <span>Revisité</span>
+                    </div>
+                    <div class="item-price">18€</div>
+
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Créme brulée</h2>
-                    <span>Revisité</span>
-                    <span class="price">22€</span>
+                    <div class="item-header">
+                        <h2>Créme brulée</h2>
+                        <span>Revisité</span>
+                    </div>
+                    <div class="item-price">22€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
                 <li class="animate-card">
-                    <h2>Tiramisu</h2>
-                    <span>A la noisette</span>
-                    <span class="price">23€</span>
+                    <div class="item-header">
+                        <h2>Tiramisu</h2>
+                        <span>A la noisette</span>
+                    </div>
+                    <div class="item-price">23€</div>
+                    <div class="checkbox">
+                        <i class="fas fa-check-circle btn-checked"></i>
+                    </div>
                 </li>
             </ul>
         </div>
+
+
+
         <div class="Commander"><span>Commander</span></div>
     </div>
 
